@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 11/12/2014 ==
+Uleat: Changed 'GMTrainee' struct to reflect the actual client hard-coded max skill count (100) - applies to all currently supported clients (6.2->RoF)
+
 == 11/11/2014 ==
 Uleat: Third attempt at a fix for GM trainer zone crashes... (this is starting to look like a KLS fix...)
 
